# KUKU-IO-LED

./: .gitignore  KUKU-IO-LED.sln  README.md  bloquear-seleccion-ejemplo.html  fix_fonts.js  launch-tauri-safe.sh  package-lock.json  package.json  run-tauri-fix.sh  run-tauri.sh  start-backend.ps1  start.ps1
KUKU-IO-LED/: .gitignore
backend/: .env.example  Program.cs  appsettings.example.json  appsettings.json  backend.csproj  dotnet run   kukuioted.db  package.json
backend/Controllers/: ArticulosController.cs  AuthController.cs  ClientesController.cs  UnidadesMedidaController.cs  UnidadesMedidadController.cs  UsuariosController.cs  VentasController.cs
backend/DTOs/: ArticuloDto.cs  ClienteDto.cs  CuentaPorCobrarDto.cs  EmpresaDto.cs  LoginDto.cs  MovimientoInventarioDto.cs  PagoCuentaCobrarDto.cs  ReciboDto.cs  RolDto.cs  UnidadMedidaDto.cs  UsuarioDto.cs  VentaDetalleDto.cs  VentaDto.cs
backend/Data/: AppDbContext.cs
backend/Migrations/: 20260502224330_Inicial.Designer.cs  20260502224330_Inicial.cs  20260503002957_ConfiguracionHibrida.Designer.cs  20260503002957_ConfiguracionHibrida.cs  20260503044825_FixClientOptions.Designer.cs  20260503044825_FixClientOptions.cs  AppDbContextModelSnapshot.cs
backend/Models/: Articulo.cs  Cliente.cs  CuentaPorCobrar.cs  Empresa.cs  Recibo.cs  (+6 more)
frontend/: .env.example  index.html  package-lock.json  package.json  run-kuku-app.vbs  run-tauri-dev.bat  run-tauri-dev.ps1  run-tauri-dev.vbs  vite.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
(+159 files in other folders)
