[package]
name = "kuku_io_led"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "1", features = ["icon-png"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
